--- a/index.html
+++ b/index.html
@@ -71,12 +71,20 @@
       <section id="bio" class="bio section">
         <div class="bio__data">
           <h1 class="bio__heading">
-            Hi There, I’M A Passionate Software Engineer
+            Hi There, I’M A Passionate Frontend Developer
           </h1>
           <p class="bio__objective">
-            My name is <span class="bio__name">Abeer Mansour</span> here is some
-            words about myself I'll write them later, and here will be an
-            example of a <a href="#" class="bio__link1">related link</a>
+            My name is <span class="bio__name">Abeer Mansour</span> , a Frontend
+            Developer passionate about creating responsive and user-friendly
+            websites. With a background in Computer Science and experience in UX
+            design, I bring a unique perspective to web development. I’m
+            constantly learning and refining my skills to deliver meaningful
+            digital experiences. Let's connect:
+            <a
+              href="https://www.linkedin.com/in/abeer-kh-mansour-83671621/"
+              class="bio__link1"
+              >My LinkedIn Profile</a
+            >
           </p>
           <a href="#contact" class="bio__links say-hi-link">Say Hi</a>
           <a href="./Abeer Mansour CV 2025.pdf" class="bio__links find-out-link"
@@ -96,61 +104,38 @@
         <ul class="skills__list">
           <li class="skills__item">
             <h2 class="skills__title">HTML</h2>
-            <span class="skills__years">8 years</span>
+            <span class="skills__years">1 year</span>
           </li>
           <li class="skills__item">
             <h2 class="skills__title">CSS</h2>
-            <span class="skills__years">8 years</span>
+            <span class="skills__years">1 year</span>
           </li>
           <li class="skills__item">
             <h2 class="skills__title">Javascript</h2>
-            <span class="skills__years">8 years</span>
+            <span class="skills__years">1 year</span>
           </li>
           <li class="skills__item">
             <h2 class="skills__title">React</h2>
-            <span class="skills__years">8 years</span>
+            <span class="skills__years">1 year</span>
           </li>
           <li class="skills__item">
-            <h2 class="skills__title">Redux</h2>
-            <span class="skills__years">8 years</span>
+            <h2 class="skills__title">Figma</h2>
+            <span class="skills__years">3 years</span>
           </li>
           <li class="skills__item">
-            <h2 class="skills__title">React testing library</h2>
-            <span class="skills__years">8 years</span>
+            <h2 class="skills__title">UX Design and Research</h2>
+            <span class="skills__years">3 years</span>
           </li>
         </ul>
-        <!-- <div class="skills__data">
-          <div class="skills__data-item">
-            <h2 class="skill__name">HTML</h2>
-            <p class="skill__duration">8 years</p>
-          </div>
-          <div class="skills__data-item">
-            <h2 class="skill__name">CSS</h2>
-            <p class="skill__duration">8 years</p>
-          </div>
-          <div class="skills__data-item">
-            <h2 class="skill__name">JavaScript</h2>
-            <p class="skill__duration">8 years</p>
-          </div>
-          <div class="skills__data-item">
-            <h2 class="skill__name">React</h2>
-            <p class="skill__duration">3 years</p>
-          </div>
-          <div class="skills__data-item">
-            <h2 class="skill__name">Redux</h2>
-            <p class="skill__duration">4 years</p>
-          </div>
-          <div class="skills__data-item">
-            <h2 class="skill__name">React Testing Library</h2>
-            <p class="skill__duration">1 years</p>
-          </div>
-        </div> -->
       </section>
-      <section id="media" class="media section">
+      <!-- ------------------ -->
+      <!-- Hidden media section until I got one for myself -->
+      <!-- -------------------------- -->
+      <!-- <section id="media" class="media section">
         <video class="media__video" poster="./images/thumbnail.jpg" controls>
           <source src="./video.mp4" type="video/mp4" />
         </video>
-      </section>
+      </section> -->
       <section id="projects" class="projects section">
         <h2 class="h2-heading">
           MY FEATURED <br />
@@ -164,54 +149,34 @@
           />
           <div class="projects__data">
             <h3 class="h3-heading">
-              Quraan Tab <br />
-              Extension
+              Project <br />
+              No. 1
             </h3>
             <p class="projects__description">
-              Quran Tab is an Islamic new tab page that will keep you inspired
-              by a verse from the Quran every time you open a new tab that helps
-              you achieve your "Khatma" and keeps you connected with the words
-              of Allah.
+              This section is a placeholder for showcasing my upcoming projects.
+              Here, you’ll find examples of my work in frontend development,
+              highlighting creative designs, responsive layouts, and interactive
+              features. Stay tuned—real projects are on the way!
             </p>
-            <a
-              href="https://bit.ly/qt-chrome"
-              class="projects__link"
-              target="_blank"
-              >Chrome Link</a
-            >
+            <a href="#" class="projects__link" target="_blank">Chrome Link</a>
             <span>-</span>
-            <a
-              href="https://bit.ly/qt-edge"
-              class="projects__link"
-              target="_blank"
-              >Edge Link</a
-            >
+            <a href="#" class="projects__link" target="_blank">Edge Link</a>
           </div>
           <!-- --------------- -->
           <div class="projects__data">
             <h3 class="h3-heading">
-              Quraan station <br />
-              Extension
+              Project <br />
+              No.2
             </h3>
             <p class="projects__description">
-              Small extension that gives you access to over 100 stations to help
-              you listen to the Quran from your favorite reciters easily
-              Quran-Station has over 100 stations to help you listen to the
-              Quran from your favorite reciters in a quick and easy way.
+              This section is a placeholder for showcasing my upcoming projects.
+              Here, you’ll find examples of my work in frontend development,
+              highlighting creative designs, responsive layouts, and interactive
+              features. Stay tuned—real projects are on the way!
             </p>
-            <a
-              href="https://bit.ly/qs-chrome"
-              class="projects__link"
-              target="_blank"
-              >Chrome Link</a
-            >
+            <a href="#" class="projects__link" target="_blank">Chrome Link</a>
             <span>-</span>
-            <a
-              href="https://bit.ly/qs-firefox"
-              class="projects__link"
-              target="_blank"
-              >Firefox Link</a
-            >
+            <a href="#" class="projects__link" target="_blank">Firefox Link</a>
             <span>-</span>
             <a
               href="https://bit.ly/quran-station-edge"
@@ -261,8 +226,8 @@
             Feel free to reach out to me any time. I prefer to talk over email,
             especially since we may be a few time zones away.
           </p>
-          <a class="contact__email" href="mailto:example@gmail.com"
-            >example@gmail.com</a
+          <a class="contact__email" href="mailto:abeerkhaledmansour@gmail.com"
+            >abeerkhaledmansour@gmail.com</a
           >
           <div class="contact__socials">
             <a href="" class="contact__social">
@@ -271,7 +236,10 @@
             <a href="" class="contact__social">
               <img src="./images/brand/twitter.svg" alt="icon of twitter" />
             </a>
-            <a href="" class="contact__social">
+            <a
+              href="https://www.linkedin.com/in/abeer-kh-mansour-83671621/"
+              class="contact__social"
+            >
               <img src="./images/brand/LinkedIn.svg" alt="icon of linkedin" />
             </a>
             <a href="" class="contact__social">
